<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/access_not_granted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/access_not_granted" />

    <Button
        android:id="@+id/issue_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/access_not_granted"
        android:layout_centerHorizontal="true"
        android:text="@string/issue_request" />

    <TextView
        android:id="@+id/restart_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/restart_text"
        android:visibility="gone" />

    <Button
        android:id="@+id/restart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restart_text"
        android:layout_centerHorizontal="true"
        android:text="@string/restart_btn"
        android:visibility="gone" />

    <TextView
        android:id="@+id/functional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/functional"
        android:visibility="gone" />

    <Button
        android:id="@+id/execute_id_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/functional"
        android:layout_centerHorizontal="true"
        android:text="@string/execute_id_command"
        android:visibility="gone" />

    <Button
        android:id="@+id/get_packages_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/execute_id_command"
        android:layout_centerHorizontal="true"
        android:text="@string/get_package_list"
        android:visibility="gone" />

</RelativeLayout>